--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,18 +1,18 @@
-setw -g mode-keys vi
+# setw -g mode-keys vi
 
 unbind C-b
 set -g prefix `
 bind-key ` send-prefix
 
-unbind %
-unbind '"'
+#unbind %
+#unbind '"'
 bind v split-window -h
 bind | split-window -h
 bind h split-window -v
 bind - split-window -v
 
-setw -g monitor-activity on
-set -g visual-activity on
+# setw -g monitor-activity on
+# set -g visual-activity on
 
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
@@ -29,16 +29,16 @@ set-window-option -g window-status-current-fg white
 #set -g status-left '#[fg=green](#S) #(whoami)@#H#[default]'
 #set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=blue]%H:%M#[default]'
 
-set-window-option -g utf8 on
-set -g default-terminal screen-256color
-set -g status-interval 1
+# set-window-option -g utf8 on
+# set -g default-terminal screen-256color
+# set -g status-interval 1
 
 bind -n C-Right next-window
 bind -n C-Left previous-window
 #bind -n M-x next-window
 #bind -n M-z previous-window
 
-setw -g mode-mouse on
+# setw -g mode-mouse on
 
 # I like to give my windows descriptive names
 set-window-option -g automatic-rename off
